# utilities

./: .gitignore  LICENSE  install.sh  uninstall.sh
coin_flip/: pyproject.toml
coin_flip/src/: coin_flip.py
default-configs/: .clang-format  .clangd  .ocamlformat  Makefile  main.c  main.ml  main.py
md_to_pdf/: pyproject.toml
md_to_pdf/src/: md_to_pdf.py
utility-coin-flip/: pyproject.toml
utility-coin-flip/src/: coin_flip.py
utility-invert-pdf/: pyproject.toml
utility-invert-pdf/src/: main.py
utility-md-to-pdf/: pyproject.toml
utility-md-to-pdf/src/: md_to_pdf.py
utility-new/: .ocamlformat  dune-project
utility-new/test/: dune
utility-orality/: pyproject.toml
utility-orality/src/: orality.py
utility-orality/web/: app.js  index.html
utility-pretty-print-json/: pyproject.toml
utility-pretty-print-json/src/: main.py
utility-timer/: .ocamlformat  Makefile  dune-project
utility-timer/test/: dune
utility-update/: pyproject.toml
utility-update/src/: utility_update.py
