[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["md_to_pdf"]

[tool.setuptools.package-dir]
"" = "src"

[project]
name = "md_to_pdf"
version = "0.1.0"
description = "Convert a Markdown file to a color-inverted PDF."
requires-python = ">=3.10"
dependencies = [
    "pymupdf",
    "markdown",
    "weasyprint",
]

[project.scripts]
md_to_pdf = "md_to_pdf:main"