[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["orality"]
package-dir = {"" = "src"}

[project]
name = "orality"
version = "0.1.0"
description = "Measure orality of a md file."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
utility-orality = "orality:main"
