[build-system]
      requires = ["setuptools>=68.0"]
      build-backend = "setuptools.build_meta"

      [tool.setuptools]
      py-modules = ["pretty_print_json"]
      package-dir = {"" = "src"}

      [project]
      name = "pretty_print_json"
      version = "0.1.0"
      description = ""
      requires-python = ">=3.10"
      dependencies = []

      [project.scripts]
      utility-pretty-print-json = "pretty_print_json:main"
  