[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["utility_update"]

[tool.setuptools.package-dir]
"" = "src"

[project]
name = "utility_update"
version = "0.1.0"
description = "Pull latest changes and reinstall all utilities."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
utility-update = "utility_update:main"